[gd_scene load_steps=13 format=3 uid="uid://bsslek606dpxw"]

[ext_resource type="Script" path="res://ui/game_UI.gd" id="1_mup5i"]
[ext_resource type="Texture2D" uid="uid://bhip5qssmo0tv" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_v14ly"]
[ext_resource type="FontFile" uid="uid://box1j7tx5ctj5" path="res://fontes/Oferta-do-Dia.ttf" id="2_i8cy2"]
[ext_resource type="Texture2D" uid="uid://bmbm3sr2p71ut" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="4_dv1xh"]
[ext_resource type="Texture2D" uid="uid://dbp5kq7bvenhn" path="res://addons/Tiny Swords/Resources/Resources/Real_(NoShadow).png" id="5_bmepx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ji0l"]
texture = ExtResource("1_v14ly")
texture_margin_left = 32.0
texture_margin_top = 18.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)
modulate_color = Color(0.445333, 1, 0.36, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ltay6"]
font = ExtResource("2_i8cy2")
font_size = 30
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_da3tq"]
atlas = ExtResource("4_dv1xh")
region = Rect2(40, 56, 56, 40)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m5c1m"]
texture = ExtResource("1_v14ly")
texture_margin_left = 32.0
texture_margin_top = 18.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)
modulate_color = Color(1, 0.940833, 0.29, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpra6"]
atlas = ExtResource("5_bmepx")
region = Rect2(48, 56, 48, 40)

[sub_resource type="LabelSettings" id="LabelSettings_sv10y"]
font = ExtResource("2_i8cy2")
font_size = 30
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2443h"]
texture = ExtResource("1_v14ly")
texture_margin_left = 32.0
texture_margin_top = 18.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)
modulate_color = Color(0.6, 0.0431373, 0.996078, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_mup5i")

[node name="Panel_Vidas" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -242.0
offset_top = 79.0
offset_right = -67.0
offset_bottom = 187.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_5ji0l")

[node name="LabelVida" type="Label" parent="Panel_Vidas"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -27.0
offset_right = 61.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "0
"
label_settings = SubResource("LabelSettings_ltay6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel_Vidas"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -28.0
offset_right = 3.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.735596, 0.735596)
texture = SubResource("AtlasTexture_da3tq")

[node name="Panel_Moedas" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 40.0
offset_right = -50.0
offset_bottom = 118.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_m5c1m")

[node name="TextureRect2" type="TextureRect" parent="Panel_Moedas"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -33.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.735596, 0.735596)
texture = SubResource("AtlasTexture_wpra6")

[node name="LabelMoedas" type="Label" parent="Panel_Moedas"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -30.0
offset_right = 39.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_sv10y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel_Tempo" type="Panel" parent="."]
offset_left = 68.0
offset_top = 63.0
offset_right = 300.0
offset_bottom = 154.0
theme_override_styles/panel = SubResource("StyleBoxTexture_2443h")

[node name="LabelTempo" type="Label" parent="Panel_Tempo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -28.5
offset_right = 70.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "00:15
"
label_settings = SubResource("LabelSettings_ltay6")
horizontal_alignment = 1
vertical_alignment = 1
